--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     namespace 'uk.org.openseizuredetector'
+    buildToolsVersion '33.0.0'
 }
 
 dependencies {
@@ -49,6 +50,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-tflite-support:16.0.1'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.work:work-runtime:2.8.1'
+    implementation files('org.junit.Assert')
     testImplementation 'junit:junit:4.13.2'
     // Set this dependency if you want to use Mockito
     testImplementation 'org.mockito:mockito-core:4.9.0'
