After shelving and unshelving commit:
Bridge now without Intent aWIntent.setData, but with aWIntent.putStringExtra (or Action)

to be completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
     android:versionCode="117"
     android:versionName="4.2.1b">
     <!-- android:allowBackup="false" -->
+
+    <queries>
+        <package android:name="uk.org.openseizuredetector.aw" />
+    </queries>
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
