Build until commit 2302272130:
Huge change SdServer: onStartCommand() now rewritten as recommended:
onHandleIntent(Intent). flags and startId were unused.

inserted class based receiver of registration i.e. like broadcast into SdDataSourceAw . This may also be sensorManager for each new sensor in Wearable- or Phone datasource.

see diff for other changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,15 @@
         <activity android:name=".RemoteDbActivity" />
         <activity android:name=".ReportSeizureActivity" />
 
+        <receiver android:name=".SdDataSourceAw$IntentBroadCastReceiver"
+            android:exported="true"
+            android:label="SdDat">
+            <intent-filter>
+                <action android:name="uk.org.openseizuredetector.broadcastTosdServer" />
+            </intent-filter>
+        </receiver>
+
+
         <receiver
             android:name=".BootBroadcastReceiver"
             android:exported="true"
