Changes upon  main V4.1.x onto the V4.2.x stack. Including: building up the bridge of Wearable communication without upping BUILD_SDK. This using added companion app on phone. Not entirely complete, now testing and next preparing add extra signals.
Also upping PreferenceManager from android to androidx due to deprication

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
+            <intent-filter>
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="uk.org.openseizuredetector.startforeground" android:host=".BootBroadcastReceiver" />
+            </intent-filter>
         </receiver>
 
         <uses-library
