--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.org.openseizuredetector"
     android:versionCode="117"
-    android:versionName="4.2.4b">
+    android:versionName="4.2.4c">
     <!-- android:allowBackup="false" -->
     <queries>
         <package android:name="uk.org.openseizuredetector.aw" />
     </queries>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -71,14 +75,6 @@
         <activity android:name=".EditEventActivity" />
         <activity android:name=".RemoteDbActivity" />
         <activity android:name=".ReportSeizureActivity" />
-
-        <receiver android:name=".SdDataSourceAw$IntentBroadCastReceiver"
-            android:exported="true"
-            android:label="SdDat">
-            <intent-filter>
-                <action android:name="uk.org.openseizuredetector.broadcastTosdServer" />
-            </intent-filter>
-        </receiver>
 
 
         <receiver
