--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 31
         multiDexEnabled true
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -32,6 +33,13 @@ android {
     buildToolsVersion '33.0.0'
 }
 
+configurations {
+    all {
+        exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
+        exclude group: 'androidx.lifecycle', module: 'jetified-lifecycle-viewmodel-ktx'
+    }
+}
+
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     //implementation files('libs/mpandroidchartlibrary-2-0-7.jar')
@@ -45,18 +53,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'androidx.test:core:1.5.0'
     implementation 'com.google.android.gms:play-services-tflite-java:16.0.1'
     implementation 'com.google.android.gms:play-services-tflite-support:16.0.1'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.work:work-runtime:2.8.1'
-    implementation files('org.junit.Assert')
-    testImplementation 'junit:junit:4.13.2'
-    // Set this dependency if you want to use Mockito
-    testImplementation 'org.mockito:mockito-core:4.9.0'
-    // Set this dependency if you want to use Hamcrest matching
-    testImplementation 'org.hamcrest:hamcrest-library:2.2'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.work:work-multiprocess:2.8.1'
+    
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     // google play services used for location finding for SMS alerts.
@@ -65,12 +67,24 @@ dependencies {
     implementation 'com.github.wendykierp:JTransforms:3.1'
     implementation 'com.google.android.gms:play-services-location:+'
     //implementation 'com.github.RohitSurwase.UCE-Handler:uce_handler:1.3'
-    testImplementation 'org.robolectric:robolectric:4.9'
     implementation 'com.android.volley:volley:1.2.1'
     implementation platform('com.google.firebase:firebase-bom:29.2.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
     implementation 'com.google.firebase:firebase-firestore'
+
+
+    androidTestImplementation 'androidx.test:runner:1.6.0-alpha02'
+    androidTestImplementation 'junit:junit:4.13.2'
+    // Set this dependency if you want to use Mockito
+    androidTestImplementation 'org.mockito:mockito-core:5.3.1'
+    // Set this dependency if you want to use Hamcrest matching
+    androidTestImplementation 'org.hamcrest:hamcrest-library:2.2'
+    androidTestImplementation 'org.robolectric:robolectric:4.10'
+    androidTestImplementation 'androidx.test:core:1.5.0'
+    androidTestImplementation 'androidx.test:rules:1.6.0-alpha01'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.0-alpha01'
+    androidTestImplementation 'androidx.test:monitor:1.6.0'
 
 }
 
@@ -78,3 +92,4 @@ repositories {
     mavenCentral()
     maven { url "https://oss.sonatype.org/content/groups/public/" }
 }
+
