--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uk.org.openseizuredetector"
-    android:versionCode="117"
-    android:versionName="4.2.4c">
+    android:versionCode="118"
+    android:versionName="4.2.4d">
     <!-- android:allowBackup="false" -->
     <queries>
         <package android:name="uk.org.openseizuredetector.aw" />
