--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="133"
-    android:versionName="5.0.0a">
+    android:versionName="5.0.0b">
     <!-- android:allowBackup="false" -->
 
     <queries>
