--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:versionCode="136"
-    android:versionName="5.0.0e">
+    android:versionCode="137"
+    android:versionName="5.0.0f">
     <!-- android:allowBackup="false" -->
 
     <queries>
